fixed the post errors

--- a/_posts/2025-06-10-ls-post.md
+++ b/_posts/2025-06-10-ls-post.md
@@ -1,11 +1,15 @@
 ---
+layout: post
+title: "Understanding the ls Command" 
+date: 2025-06-10
 
-## title: "Understanding the ls Command" date: 2025-06-10
+---
+
 
 # Understanding the ls Command
 
 This post explains the `ls` command used in my latest video.
 
-1. `ls -l`: Lists files in long format.
-2. `ls -a`: Shows hidden files.\
+ `ls -l`: Lists files in long format.
+ `ls -a`: Shows hidden files.\
    Check the video for more details.
